plugins {
    id 'java-library'
    id 'maven-publish'
}

ext.majorVersion = 3
ext.minorVersion = 6
ext.minecraftVersion = "1.13.1"

sourceCompatibility = 1.8
targetCompatibility = 1.8

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

repositories {
    mavenLocal()
    jcenter()
    mavenCentral()
    maven {
        name 'Spigot'
        url 'https://hub.spigotmc.org/nexus/content/groups/public/'
    }

    maven {
        name 'Sonatype'
        url 'https://oss.sonatype.org/content/groups/public'
    }

    maven {
        name 'sk89q'
        url "http://maven.sk89q.com/repo/"
    }

    maven {
        name 'NyaaCentral'
        url 'https://raw.githubusercontent.com/NyaaCat/NyaaCentral/maven-repo'
    }
}

dependencies {
    api 'cat.nyaa:nyaacore:6.2-SNAPSHOT'

    implementation files('lib/worldguard-legacy-7.0.0-SNAPSHOT-dist.jar')
    implementation files('lib/worldedit-bukkit-7.0.0-SNAPSHOT-dist.jar')
    implementation 'com.google.code.findbugs:jsr305:1.3.9'
    compileOnly 'org.librazy:NyaaUtilsLangChecker:2.0-SNAPSHOT'
    annotationProcessor 'org.librazy:NyaaUtilsLangChecker:2.0-SNAPSHOT'
}

String nyaaCoreLangDir = System.getenv("NYAACORE_LANG_DIR")

compileJava {
    options.compilerArgs += ["-Xplugin:NyaaUtilsLangAnnotationProcessor", "-Xlint:deprecation", "-Xlint:unchecked"]
    if (nyaaCoreLangDir != null) {
        options.compilerArgs += ["-ALANG_DIR_ADDITIONAL_PATH=" + nyaaCoreLangDir]
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            afterEvaluate {
                artifacts = [apiJar, javadocJar, sourcesJar]
            }
            groupId "cat.nyaa"
            artifactId "rpgitems"
            version "$majorVersion.$minorVersion-SNAPSHOT"
        }
    }
    repositories {
        maven {
            url "$buildDir/repo"
        }
    }
}

jar {
    classifier = 'release'
}

task apiJar(type: Jar) {
    includeEmptyDirs = false
    from sourceSets.main.output.classesDirs
    include('**/think/rpgitems/Events.class')
    include('**/think/rpgitems/api/')
    include('**/think/rpgitems/item/')
    include('**/think/rpgitems/power/')
    exclude('**/think/rpgitems/power/impl/')
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.java.srcDirs
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

javadoc {
    (options as StandardJavadocDocletOptions).with {
        links 'https://docs.oracle.com/javase/8/docs/api/'
        links 'https://hub.spigotmc.org/javadocs/spigot/'
        links 'https://google.github.io/guava/releases/21.0/api/docs/'
        links 'https://nyaacat.github.io/NyaaCentral/NyaaCore/6.1-mc1.13/javadoc/'
        links 'https://ci.md-5.net/job/BungeeCord/ws/chat/target/apidocs/'

        locale 'en_US'
        encoding 'UTF-8'
        docEncoding 'UTF-8'
        addBooleanOption('keywords', true)

        def currentJavaVersion = JavaVersion.current()
        if (currentJavaVersion > JavaVersion.VERSION_1_9) {
            options.addBooleanOption('html5', true)
        }

        windowTitle = "RPGItems Javadoc"
        String fullVersion = System.getenv("FULL_VERSION_STRING")
        if (fullVersion != null) {
            docTitle = "<b>RPGItems</b> " + System.getenv("FULL_VERSION_STRING")
        } else {
            docTitle = "<b>RPGItems</b>"
        }
    }
}